Overflow should be fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+*{
+  Overflow-x: hidden
+}
 
 .App {
   text-align: center;
